changed .env and name Becca's Blog

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,9 +19,9 @@ const posts = entries.items.map((item) => {
 });
 ---
 <MainLayout title="My Blog">
-  </head>
+  
   <body>
-    <h1>My Blog</h1>
+    <h2 class="h1">Becca's Blog</h2>
     <section class="container" aria-label="New Blog Posts">
       <div class="post-container">
     <ul>
