Changed title to Becca's Blog

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const posts = entries.items.map((item) => {
   };
 });
 ---
-<MainLayout title="My Blog">
+<MainLayout title="Becca's Blog">
   
   <body>
     <h2 class="h1">Becca's Blog</h2>
