--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,5 +1,5 @@
 ---
-const imageSrc = "/src/images/your-image.jpg"; // Replace with the name of your image
+const imageSrc = "/src/images/grand_canyon1.jpg"; // Replace with the name of your image
 ---
 
 <section 
