--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,6 +21,7 @@ const posts = entries.items.map((item) => {
 ---
 <MainLayout title="Becca's Blog">
 <Hero />  
+  <p><small>by Rebecca Rickey</small></p>
   
     
     <section class="container" aria-label="New Blog Posts">
