--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -25,7 +25,7 @@ export async function getStaticPaths() {
 
 const { content, title, date, author, slug, photo } = Astro.props;
 ---
-<MainLayout title="Blog Post">
+<MainLayout title="Becca's Blog Post">
   <article class="card">
     <h2 class="h1">{title}</h2>
     <time>{date}</time>
