--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,7 +7,7 @@ const imageSrc = "/images/grand_canyon1.jpg"; // Replace with the name of your i
   style={`background-image: url(${imageSrc});`}
 >
   <div class="overlay">
-    <h1 class="hero-title">Becca's Blog</h1>
+    <h1 class="hero-title">Becca's Awesome Blog</h1>
   </div>
 </section>
 
